# python-cpufreq

./: .gitignore  CMakeLists.txt
cmake/: CythonAddFiles.py  CythonCheckWrap.sh  CythonMacro.cmake
src/: CMakeLists.txt
src/cpufreq/: __init__.py  _cpufreq.pxd  cpufreq.pxd  cpufreq.pyx
